# QuantOps-cli

./: .env.example  .gitignore  AGENTS.md  README.md  package.json  pyproject.toml  tsconfig.json
.omx/plans/: prd-quant-cli-lab-v1.md  test-spec-quant-cli-lab-v1.md
quant-skills/quantops-agent-runtime/: SKILL.md
quant-skills/quantops-data-backtest-check/: SKILL.md
quant-skills/quantops-idea-coach/: SKILL.md
quant-skills/quantops-research-lab/: SKILL.md
quant-skills/tossquant-idea-coach/: SKILL.md
quant-skills/tossquant-research-lab/: SKILL.md
quant_cli_lab/: __init__.py  analysis.py  audit.py  cli.py  codex_tools.py  hud.py  storage.py  toss.py
quantops_cli/: __init__.py  cli.py  data.py  market_analysis.py  runtime.py  storage.py
quantops_cli/__tests__/: test_quantops_cli.py
src/: agent.ts  analysis.ts  audit.ts  backtest.ts  cli.ts  cliArgs.ts  codex.ts  collect.ts  compare.ts  data.ts  discovery.ts  doctor.ts  events.ts  guide.ts  help.ts  hud.ts  idea.ts  lab.ts  marketAnalysis.ts  mcp.ts  natural.ts  next.ts  period.ts  preferences.ts  providers.ts  research.ts  runtime.ts  runtimeContract.ts  rustBacktest.ts  rustEvent.ts  rustRuntime.ts  rustStats.ts  rustValidate.ts  session.ts  setup.ts  skills.ts  storage.ts  toolCommands.ts  tools.ts  toss.ts
src/__tests__/: agent.test.ts  analysis.test.ts  audit.test.ts  backtest.test.ts  chat.test.ts  cli.test.ts  codex.test.ts  (+20 more)
tests/: test_quant_cli_lab.py
tests-ts/: runtime.test.ts
tossquant_cli/: __init__.py  cli.py  codex_tools.py  data.py  hud.py  runtime.py  storage.py
tui/: Cargo.toml
(+17 files in other folders)
