[project]
name = "tossquant-cli"
version = "0.1.0"
description = "TypeScript-first terminal quant runtime around tossctl read-only data"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
tossquant = "tossquant_cli.cli:main"
quant = "tossquant_cli.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
