[project]
name = "quantops-cli"
version = "0.1.0"
description = "Headless quant research runtime for rtk JSON workflows"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
quantops = "quantops_cli.cli:main"
quant = "quantops_cli.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
